force-app/main/default/objects/Account/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <label>Account Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0. No Effort</fullName>
                <default>true</default>
                <label>0. No Effort</label>
            </value>
            <value>
                <fullName>1. Outreach</fullName>
            </value>
            <value>
                <fullName>2. Communicated With</fullName>
            </value>
            <value>
                <fullName>3. Meeting scheduled</fullName>
            </value>
            <value>
                <fullName>4. Met in Person</fullName>
            </value>
            <value>
                <fullName>5. Created Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>