force-app/main/default/objects/Account/fields/Accounting__c.field-meta.xml
<CustomField>
    <fullName>Accounting__c</fullName>
    <label>Financial/Practice Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Elite Enterprise</fullName>
            </value>
            <value>
                <fullName>Elite 3E</fullName>
            </value>
            <value>
                <fullName>Javelan</fullName>
            </value>
            <value>
                <fullName>Juris</fullName>
            </value>
            <value>
                <fullName>Rippe Kingston</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>