force-app/main/default/objects/Account/fields/Active_NPI_Project__c.field-meta.xml
<CustomField>
    <fullName>Active_NPI_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is manually checked whenever there is an active NPI Project</description>
    <label>Active NPI Project</label>
    <type>Checkbox</type>
</CustomField>