force-app/main/default/objects/Account/fields/ADAM__c.field-meta.xml
<CustomField>
    <fullName>ADAM__c</fullName>
    <label>ADAM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Own It</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>