force-app/main/default/objects/Account/fields/Affiliate_Association__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Association__c</fullName>
    <description>Affiliation or association. Usually included on law firm website.</description>
    <inlineHelpText>Find other firms with the same affiliation/association (usually listed on firm website) for use in outreach efforts.</inlineHelpText>
    <label>Affiliation/Association</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALFA International</fullName>
            </value>
            <value>
                <fullName>Lex Mundi</fullName>
            </value>
            <value>
                <fullName>Meritas</fullName>
            </value>
            <value>
                <fullName>TAGLaw</fullName>
            </value>
            <value>
                <fullName>TerraLex</fullName>
            </value>
            <value>
                <fullName>USLaw Network</fullName>
            </value>
            <value>
                <fullName>USLFG - US Law Firm Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>