force-app/main/default/objects/Account/fields/AI_Tools__c.field-meta.xml
<CustomField>
    <fullName>AI_Tools__c</fullName>
    <label>AI Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kira</fullName>
            </value>
            <value>
                <fullName>RAVN</fullName>
            </value>
            <value>
                <fullName>Luminance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>