force-app/main/default/objects/Account/fields/All_Products_Highest_Package__c.field-meta.xml
<CustomField>
    <fullName>All_Products_Highest_Package__c</fullName>
    <description>Field on Account populated by flow that brings the Product Line values from the POD of all PODs where Status = Own it, Highest Package = TRUE</description>
    <inlineHelpText>Field on Account populated by flow that brings the Product Line values from the POD of all PODs where Status = Own it, Highest Package = TRUE</inlineHelpText>
    <label>All Products Highest Package</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>