force-app/main/default/objects/Account/fields/Alliance_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Memberships__c</fullName>
    <inlineHelpText>Does this accounting firm belong to an alliance? Alliances provide co-marketing, referrals, and outsourcing activities.</inlineHelpText>
    <label>Alliance Memberships</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baker Tilly</fullName>
            </value>
            <value>
                <fullName>BDO Alliance</fullName>
            </value>
            <value>
                <fullName>DFK International</fullName>
            </value>
            <value>
                <fullName>Leading Edge Alliance</fullName>
            </value>
            <value>
                <fullName>McGladrey</fullName>
            </value>
            <value>
                <fullName>Moore Stephens</fullName>
            </value>
            <value>
                <fullName>MSI Global Alliance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PKF International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>