force-app/main/default/objects/Account/fields/At_Risk_Count__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Count__c</fullName>
    <description>Count of all at risk Subscriptions - Integration.</description>
    <inlineHelpText>Count of all at risk Subscriptions - Integration.</inlineHelpText>
    <label>At Risk Count</label>
    <summaryFilterItems>
        <field>Subscription__c.CSM_Health_Rating__c</field>
        <operation>equals</operation>
        <value>D - At Risk / Anticipated Cancellation</value>
    </summaryFilterItems>
    <summaryForeignKey>Subscription__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>