force-app/main/default/objects/Account/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <inlineHelpText>What percentage of their business is audit? i.e. if it is 10%, enter 10.</inlineHelpText>
    <label>Audit</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>