force-app/main/default/objects/Account/fields/AVA_BLNG__Transport__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport</label>
    <referenceTo>AVA_BLNG__Transport__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>