force-app/main/default/objects/Account/fields/BES__c.field-meta.xml
<CustomField>
    <fullName>BES__c</fullName>
    <description>BES - Blackberry Enterprise Server</description>
    <label>BES</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4.1.5</fullName>
            </value>
            <value>
                <fullName>4.1.4</fullName>
            </value>
            <value>
                <fullName>4.1.x</fullName>
            </value>
            <value>
                <fullName>4.0.x</fullName>
            </value>
            <value>
                <fullName>3.6.x</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>