force-app/main/default/objects/Account/fields/Bill_To_Entity__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account wide Bill To – OSA will be papered to/billed to this entity for all OSAs going forward. If blank then OSA/bill to will default to Account name/address.</inlineHelpText>
    <label>Bill To Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Services Companies bill to account)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>