force-app/main/default/objects/Account/fields/Biz_Dev_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Account_Owner__c</fullName>
    <description>This designates the business development team account owner. This was created because the business development team does not have individual accounts to store this information in the native SF field.</description>
    <label>Biz Dev Account Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bob Schick</fullName>
            </value>
            <value>
                <fullName>James Nielsen</fullName>
            </value>
            <value>
                <fullName>Scott McLin</fullName>
            </value>
            <value>
                <fullName>Oliver Wai</fullName>
            </value>
            <value>
                <fullName>Jay Borenstein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>