force-app/main/default/objects/Account/fields/Build_COO_CIO_Support__c.field-meta.xml
<CustomField>
    <fullName>Build_COO_CIO_Support__c</fullName>
    <label>Build COO/CIO Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>