force-app/main/default/objects/Account/fields/Client_Advocacy_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Advocacy_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This team member works with premium support clients and select client tiers focused on support success and other key &quot;voice of the client&quot; initiatives. Please reach out to this team member if you have a Support Case escalation for this account</description>
    <inlineHelpText>This team member works with premium support clients and select client tiers focused on support success and other key &quot;voice of the client&quot; initiatives. Please reach out to this team member if you have a Support Case escalation for this account</inlineHelpText>
    <label>Client Advocacy Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4VGQ</relationshipName>
    <type>Lookup</type>
</CustomField>