force-app/main/default/objects/Account/fields/Company_Data_Provider__c.field-meta.xml
<CustomField>
    <fullName>Company_Data_Provider__c</fullName>
    <inlineHelpText>What data provider does this account use?</inlineHelpText>
    <label>Company Data Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Audit Analytics</fullName>
            </value>
            <value>
                <fullName>Bloomberg/BNA</fullName>
            </value>
            <value>
                <fullName>Bureau van Dijk - Orbis</fullName>
                <label>Bureau van Dijk/Orbis</label>
            </value>
            <value>
                <fullName>Compliance Science</fullName>
            </value>
            <value>
                <fullName>Crunchbase</fullName>
            </value>
            <value>
                <fullName>Dow Jones/Factiva</fullName>
            </value>
            <value>
                <fullName>Dun &amp; Bradstreet</fullName>
                <label>Dun &amp; Bradstreet/Avention/Hoovers</label>
            </value>
            <value>
                <fullName>Equifax</fullName>
            </value>
            <value>
                <fullName>Exiger/DDIQ</fullName>
            </value>
            <value>
                <fullName>Experian</fullName>
            </value>
            <value>
                <fullName>FactSet/Encompass</fullName>
            </value>
            <value>
                <fullName>LexisNexis/Accurint/Accuity</fullName>
            </value>
            <value>
                <fullName>Morningstar/Pitchbook</fullName>
            </value>
            <value>
                <fullName>MyComplianceOffice</fullName>
            </value>
            <value>
                <fullName>NICE/Actimize</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
            <value>
                <fullName>S&amp;P CapitalIQ</fullName>
            </value>
            <value>
                <fullName>SchwabCT</fullName>
            </value>
            <value>
                <fullName>SmartSearchUK</fullName>
            </value>
            <value>
                <fullName>Thomson Reuters - World-Check</fullName>
                <label>Thomson Reuters/WorldCheck</label>
            </value>
            <value>
                <fullName>TransUnion/TLO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>