force-app/main/default/objects/Account/fields/Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Agreement__c</fullName>
    <description>If we have an NDA on file an NDA with this account, what type is it?  General - Broad Scope; Limited - Project Scope only.</description>
    <inlineHelpText>If there is an NDA on file for this account, what type is it?</inlineHelpText>
    <label>Confidentiality Agreement?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>