force-app/main/default/objects/Account/fields/Confidentiality_Mgmt_Platform_Previous__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Mgmt_Platform_Previous__c</fullName>
    <description>Previous Confidentiality Management Platform, prior to purchasing Wall Builder</description>
    <inlineHelpText>What confidentiality platform did the account use previously?</inlineHelpText>
    <label>Confidentiality Mgmt Platform - Previous</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMH Ethical Wall</fullName>
            </value>
            <value>
                <fullName>Aztech EthicalWall</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>Compliguard</fullName>
            </value>
            <value>
                <fullName>Custom (homegrown)</fullName>
            </value>
            <value>
                <fullName>DocAuto iMPrivate</fullName>
            </value>
            <value>
                <fullName>EIM WincWall</fullName>
            </value>
            <value>
                <fullName>HBR Matter-Based Security</fullName>
            </value>
            <value>
                <fullName>LegalKEY Ethical Walls</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Matrix Logic Custodian</fullName>
            </value>
            <value>
                <fullName>Olson Consulting (Security Guard)</fullName>
            </value>
            <value>
                <fullName>Prosperoware</fullName>
            </value>
            <value>
                <fullName>RBRO MasterEthics</fullName>
            </value>
            <value>
                <fullName>Wall Builder</fullName>
            </value>
            <value>
                <fullName>Younts Consulting (The Wall)</fullName>
            </value>
            <value>
                <fullName>Intapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>