force-app/main/default/objects/Account/fields/Contact_Management__c.field-meta.xml
<CustomField>
    <fullName>Contact_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Management</label>
    <type>Checkbox</type>
</CustomField>